--- a/scss/component/_header.scss
+++ b/scss/component/_header.scss
@@ -60,6 +60,7 @@ $header-height: 80px;
   display: flex;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 .menu-item {
   position: relative;
